# openapi/openapi.yaml
@@ -77,6 +77,81 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Task"
+  /users:
+    get:
+      summary: Get all users
+      tags:
+        - users
+      operationId: GetUsers
+      responses:
+        '200':
+          description: A list of users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/User"
+    post:
+      summary: Create a new user
+      tags:
+        - users
+      operationId: PostUser
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/User"
+      responses:
+        '201':
+          description: User created
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+  /users/{user_id}:
+    patch:
+      summary: Update user data
+      tags:
+        - users
+      operationId: PatchUserByID
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/User"
+      parameters:
+        - name: user_id
+          in: path
+          reqired: true
+          schema:
+            type: integer
+            format: uint
+      responses:
+        '200':
+          description: User updated
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+    delete:
+      summary: Delete a user
+      tags:
+        - users
+      operationId: DeleteUserByID
+      parameters:
+        - name: user_id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: uint
+      responses:
+        '204':
+          description: User deleted
+
       
       
 
@@ -92,3 +167,13 @@ components:
           type: string
         is_done:
           type: boolean
+    User:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: uint
+        email:
+          type: string
+        password:
+          type: string
